--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 			        
                             <div id="photos">
 						        <h2>Celebrity Photos</h2>
-                                <img alt="Glendatronix" class="show" src="./jQuery-novice-to-ninja/tree/master/images/glenda_200.jpg" />
+                                <img alt="Glendatronix" class="show" src="./css-jq/images/glenda_200.jpg" />
                                 <img alt="Darth Fader" src="./css-jq/images/fader_200.jpg" />
-                                <img alt="Beau Dandy" src="./images/beau_200.jpg" />
-                                <img alt="Johnny Stardust" src="./images/johnny_200.jpg" />
-                                <img alt="Mo' Fat" src="./images/mofat_200.jpg" />
+                                <img alt="Beau Dandy" src="./css-jq/images/beau_200.jpg" />
+                                <img alt="Johnny Stardust" src="./css-jq/images/johnny_200.jpg" />
+                                <img alt="Mo' Fat" src="./css-jq/images/mofat_200.jpg" />
                             </div>
                             <div id="celebs">
   			                    <h2 class="heading">Our Celebrities</h2>
@@ -273,35 +273,35 @@
 	  <tbody>
 	    <tr>
 	      <td>203A</td>
-	      <td>Johny Stardust (<a href="./images/johnny_400.jpg" class="lightbox">pic</a>)</td>
+	      <td>Johny Stardust (<a href="./css-jq/images/johnny_400.jpg" class="lightbox">pic</a>)</td>
 	      <td>Front-man</td>
 	      <td>Los Angeles</td>
 	      <td>$39.95</td>
 	    </tr>
 	    <tr>
 	      <td>141B</td>
-	      <td>Beau Dandy (<a href="./images/beau_400.jpg" class="lightbox">pic</a>)</td>
+	      <td>Beau Dandy (<a href="./css-jq/images/beau_400.jpg" class="lightbox">pic</a>)</td>
 	      <td>Singer</td>
 	      <td>New York</td>
 	      <td>$39.95</td>
 	    </tr>
 	    <tr>
 	      <td>2031</td>
-	      <td>Mo' Fat (<a href="./images/mofat_400.jpg" class="lightbox">pic</a>)</td>
+	      <td>Mo' Fat (<a href="./css-jq/images/mofat_400.jpg" class="lightbox">pic</a>)</td>
 	      <td>Producer</td>
 	      <td>New York</td>
 	      <td>$19.95</td>
 	    </tr>
 	    <tr>
 	      <td>007F</td>
-	      <td>Kellie Kelly (<a href="./images/kellie_400.jpg" class="lightbox">pic</a>)</td>
+	      <td>Kellie Kelly (<a href="./css-jq/images/kellie_400.jpg" class="lightbox">pic</a>)</td>
 	      <td>Singer</td>
 	      <td>Omaha</td>
 	      <td>$11.95</td>
 	    </tr>
 	    <tr>
 	      <td>8A05</td>
-	      <td>Darth Fader (<a href="./images/fader_400.jpg" class="lightbox">pic</a>)</td>
+	      <td>Darth Fader (<a href="./css-jq/images/fader_400.jpg" class="lightbox">pic</a>)</td>
 	      <td>DJ</td>
 	      <td>London</td>
 	      <td>$19.95</td>
