--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 			        
                             <div id="photos">
 						        <h2>Celebrity Photos</h2>
-                                <img alt="Glendatronix" class="show" src="./css-jq/images/glenda_200.jpg" />
-                                <img alt="Darth Fader" src="./css-jq/images/fader_200.jpg" />
-                                <img alt="Beau Dandy" src="./css-jq/images/beau_200.jpg" />
-                                <img alt="Johnny Stardust" src="./css-jq/images/johnny_200.jpg" />
-                                <img alt="Mo' Fat" src="./css-jq/images/mofat_200.jpg" />
+                                <img alt="Glendatronix" class="show" src="./images/glenda_200.jpg" />
+                                <img alt="Darth Fader" src="./images/fader_200.jpg" />
+                                <img alt="Beau Dandy" src="./images/beau_200.jpg" />
+                                <img alt="Johnny Stardust" src="./images/johnny_200.jpg" />
+                                <img alt="Mo' Fat" src="./images/mofat_200.jpg" />
                             </div>
                             <div id="celebs">
   			                    <h2 class="heading">Our Celebrities</h2>
