--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		
 		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
