--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
         <![endif]-->
     </head>
     <body>
+		<div>
+            <div id="green" class="box">Go!</div>
+            <div id="red" class="box">Go!</div>
+        </div>
 		<div class="wrapper">
 			<a href="./gran-parents.jpg" class="lightbox">pic</a>
 			<img class="logo" src="./img/flexy-logo.png">
