--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <div class="col-12" style="padding: 2%;">
                             <div id="banner">
                                 <div id="banner-wrapper">
-                                    <h2 class="heading"><strong>Award winning accommodation, self catering or bed and breakfast</strong></h2> 
+                                    <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit</strong></h2> 
                                 </div>
 				            </div>
 	                    </div>
