--- a/index.html
+++ b/index.html
@@ -218,21 +218,19 @@
                     <div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
-							<div id="content">
                                 <h2>Welcome!</h2>
-                            </div>
-                        </div><!-- end-.row -->
-                    </div>
+                        </div>
     
-                    <div class="row">
-                        <div class="col-12" style="padding: 2%;">
-                            <div id="banner">
-                                <div id="banner-wrapper">
-                                    <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit</strong></h2> 
-                                </div>
-				            </div>
-	                    </div>
-		            </div><!-- end-.row -->  
+                        <div class="row">
+                            <div class="col-12" style="padding: 2%;">
+                                <div id="banner">
+                                    <div id="banner-wrapper">
+                                        <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit</strong></h2> 
+                                    </div>
+				                </div>
+	                        </div>
+		                </div><!-- end-.row -->  
+					</div>
 			    
                     <div class="row" style="background-color: #f6931e;">
                         <div class="col-11">
@@ -240,16 +238,16 @@
 						    <div id="container">
                                 <div id="header">
                                     <h1>StarTrackr!</h1>
-                                    </div>
-                                    <div id="content">
-                                        <h2>Welcome!</h2>
-                                        <ul id="navigation">
-                                            <li><a href="#">Home</a></li>
-                                            <li><a href="#">Buy Now!</a></li>
-	                                        <li><a href="#">About Us</a></li>
-	                                        <li><a href="#">Gift Ideas</a></li>
-                                        </ul>
-                                        <p id="intro">
+                                </div>
+                                <div id="content">
+                                   <!-- <h2>Welcome!</h2> -->
+                                    <ul id="navigation">
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Buy Now!</a></li>
+	                                    <li><a href="#">About Us</a></li>
+	                                    <li><a href="#">Gift Ideas</a></li>
+                                    </ul>
+                                    <p id="intro">
 	Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!		
       </p>
       <p id="disclaimer">
