--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -317,7 +317,7 @@
 
                     <!--</div> removed and replaced with </nav>--
                     <div class="data" id="html5-ch1-7midcol">
-                        <h3>Situated in the BDA's beautiful countryside</h3>
+                        <h3>Situated in th BDA's beautiful countryside</h3>
                         <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                     </div>
 				
