--- a/starter-page.html
+++ b/starter-page.html
@@ -361,7 +361,29 @@
 
                 <div class="row" style="background-color: #00afe1;">
                     <div class="col-7">
+						
                         <h2>So come along for the ride!</h2>
+						<div class="data" id="html5-style-2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
+
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5-style-2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
+						<!--
                         <h3>Around town last night</h3>
                         <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
@@ -378,6 +400,7 @@
                                 <li><img alt="Mo' Fat" src="./images/mofat_400.jpg" /></li>
                             </ul>
                         </div>
+						-->
                         <div class="col-3">
                             <img id="globe" class="circle" src="images/globe.png" width="215px">
                         </div>
@@ -493,6 +516,26 @@
             <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                 <div class="col-12">
                     <img src="images/paper.png" width="95%";>
+					<div class="data" id="html5-style-2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
+
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5-style-2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
                 </div><!-- end col-12 -->
             </div> <!-- end class row -->
 	
@@ -651,6 +694,7 @@
       <div class="row" style="background-color: #1abc9c;">
         <div class="col-10">
           <h2>We're flying around the globe</h2>
+			<!--
           <div id="news">
             <h2>Latest News</h2>
             <p>
@@ -661,6 +705,7 @@
             </p>
             <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
           </div>
+			-->
         </div>
         <div class="col-3">
           <img id="waves" class="circle" src="images/waves.png">
@@ -670,6 +715,26 @@
       <div class="row" style="background-color: #e5ef3f;">
         <div class="col-9">
           <h2>Above the clouds &amp; over the sea.</h2>
+		<div class="data" id="html5-style-2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
+
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5-style-2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
           <div>
             <h2 class="heading">Our Celebrities</h2>
             <p class="info">
@@ -741,7 +806,27 @@
       <div class="row" style="background-color: #34495e;">
         <div class="col-8">
           <h2>Fine Print In just 42 hours and 27 minutes</h2>
+			<div class="data" id="html5-style-2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
 
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5-style-2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
+<!--
           <p id="fine_print">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -767,6 +852,26 @@
       <div class="row" style="background-color: #00afe1;">
         <div class="col-7">
           <h2>So come along for the ride!</h2>
+		  <div class="data" id="html5-style-2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
+
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5-style-2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
           <h3>Around town last night</h3>
           <div id="photos">
             <a href="#" class="trigger">Image Gallery</a>
