--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+j<!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>SEO Specialist-Eldrige Smith</title>
@@ -23,8 +23,9 @@
 	    <!-- <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="style[1].css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-	    <!-- <link rel="stylesheet" href="./nav[1].css"> -->
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+	    <link rel="stylesheet" href="./nav[1].css"> 
+       <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 	    <link rel="icon" type="image/png" href="./weed.jpg">
