--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@ j<!DOCTYPE html>
                                 <img src="img/paper.png">
                                 <div class="data" id="html5style2leftcol">
                                     <h3>Cottages, converted barns, caravans</h3>
-                                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                    <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
                                     <br>The superb interior of one of our cottages
                                 </div>
                                 <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
@@ -148,7 +148,7 @@ j<!DOCTYPE html>
                                 <!--</div> removed and replaced with </nav>-->
                                 <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda-1.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
                             </div>
 
                             </div><!-- end-col-12 -->
