--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@ j<!DOCTYPE html>
                                         <img src="img/paper.png">
                                         <div class="data" id="html5style2leftcol">
                                             <h3>Cottages, converted barns, caravans</h3>
-                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda-2.jpg" width="300">
+                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
                                             <br>The superb interior of one of our cottages
                                         </div>
 
@@ -178,7 +178,7 @@ j<!DOCTYPE html>
                                         <!--</div> removed and replaced with </nav>-->
                                         <div class="data" id="html5style2midcol">
                                             <h3>Situated in the BDA's beautiful countryside</h3>
-                                            <img title="Devon countryside" alt="Devon countryside" src="images/bda-3.jpg" height="229" width="398">
+                                            <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
                                         </div>
 						            </div>          
                                 </div><!-- end col-11 -->
@@ -192,7 +192,7 @@ j<!DOCTYPE html>
                                             <img src="img/paper.png">
                                             <div class="data" id="html5style2leftcol">
                                                 <h3>Cottages, converted barns, caravans</h3>
-                                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda-4.jpg" width="300">
+                                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
                                                 <br>The superb interior of one of our cottages
                                             </div>
 
@@ -208,7 +208,7 @@ j<!DOCTYPE html>
                                             <!--</div> removed and replaced with </nav>-->
                                             <div class="data" id="html5style2midcol">
                                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                                <img title="Devon countryside" alt="Devon countryside" src="images/bda-5.jpg" height="229" width="398">
+                                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
                                             </div>
 						                </div>          
                                     </div><!-- end class row -->
@@ -228,7 +228,7 @@ j<!DOCTYPE html>
                                         <img src="img/paper.png">
                                         <div class="data" id="html5style2leftcol">
                                             <h3>Cottages, converted barns, caravans</h3>
-                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda-6.jpg" width="300">
+                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg" width="300">
                                             <br>The superb interior of one of our cottages
                                         </div>
                                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
@@ -243,7 +243,7 @@ j<!DOCTYPE html>
                                         <!--</div> removed and replaced with </nav>-->
                                         <div class="data" id="html5style2midcol">
                                             <h3>Situated in the BDA's beautiful countryside</h3>
-                                            <img title="Devon countryside" alt="Devon countryside" src="images/bda-7.jpg" height="229" width="398">
+                                            <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229" width="398">
                                         </div>
 						            </div>
                                     <div class="col-3">
@@ -261,7 +261,7 @@ j<!DOCTYPE html>
                                         <img src="img/paper.png">
                                         <div class="data" id="html5style2leftcol">
                                             <h3>Cottages, converted barns, caravans</h3>
-                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda-8.jpg" width="300">
+                                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-9.jpg" width="300">
                                             <br>The superb interior of one of our cottages
                                         </div>
 
@@ -277,7 +277,7 @@ j<!DOCTYPE html>
                                         <!--</div> removed and replaced with </nav>-->
                                         <div class="data" id="html5style2midcol">
                                             <h3>Situated in the BDA's beautiful countryside</h3>
-                                            <img title="Devon countryside" alt="Devon countryside" src="images/bda-9.jpg" height="229" width="398">
+                                            <img title="Devon countryside" alt="Devon countryside" src="./bda-10.jpg" height="229" width="398">
                                         </div>
                                         <div class="col-3">
                                             <img id="plane" class="circle" src="img/plane.png">
