--- a/about.html
+++ b/about.html
@@ -126,13 +126,12 @@ j<!DOCTYPE html>
                         </div><!-- end-row -->
                         <br class="clear">	
 				
-                        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
                         <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                             <div class="çol-12">
                                 <img src="img/paper.png">
                                 <div class="data" id="html5style2leftcol">
                                     <h3>Cottages, converted barns, caravans</h3>
-                                    <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
+                                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                     <br>The superb interior of one of our cottages
                                 </div>
                                 <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
@@ -143,16 +142,15 @@ j<!DOCTYPE html>
                                         <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                         <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                     </ul><!--end of menu list-->
-							    </nav>
+                                </nav>
 
                                 <!--</div> removed and replaced with </nav>-->
                                 <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
-                            </div>
-
-                            </div><!-- end-col-12 -->
-                        </div> <!-- end class row -->
+                                    <h3>Situated in the BDA's beautiful countryside</h3>
+                                    <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                </div>
+					        </div><!-- end-col-12 -->
+                        </div><!-- end-row -->
 				
                         <div class="row" style="background-color: #F6931E;">
                             <div class="col-11">
