--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@ j
     <meta property="og:audio:type" content="audio/mpeg">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <!-- Viewport for responsive web design -->
-    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+    <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
@@ -60,8 +60,8 @@ j
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
-    <script src=”js/jquery.mobile-1.0.1.min.js”></script>
-    <script type=”text/javascript” src=”assets/js/ui.js”></script>
+    <script src="./js/jquery.mobile-1.0.1.min.js"></script>
+    <script type="text/javascript" src="../assets/js/ui.js"></script>
     <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
