--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ j
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./scripts.js"></script>
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
     <!-- <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="style[1].css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
@@ -39,8 +39,7 @@ j
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
@@ -72,7 +71,6 @@ j
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
 </head>
-
 <body>
     <div class="wrapper">
         <img class="logo" src="./img/flexy-logo.png">
@@ -117,26 +115,21 @@ j
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
                                     width="300">
                                 <br>The superb interior of one of our cottages
-                            </div>
+                            </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
 
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
@@ -144,7 +137,7 @@ j
 
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
-                            <img src="img/paper.png">
+                            
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
