--- a/membership.html
+++ b/membership.html
@@ -376,69 +376,7 @@
                             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
                                 width="398">
                         </div>
-                        <div>
-                            <h2 class="heading">Our Celebrities</h2>
-                            <p class="info">
-                                We have an ever changing roster of newly chipped celebrities. But it can take as little
-                                as a week for
-                                the little critters to realise they've been tagged - so you have to be fast!
-                            </p>
-                            <table class="data" id="celebs">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Name</th>
-                                        <th>Occupation</th>
-                                        <th>Approx. Location</th>
-                                        <th>Price</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>203A</td>
-                                        <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
-                                        <td>Front-man</td>
-                                        <td>Los Angeles</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>141B</td>
-                                        <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
-                                        <td>Singer</td>
-                                        <td>New York</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2031</td>
-                                        <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
-                                        <td>Producer</td>
-                                        <td>New York</td>
-                                        <td>$19.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>007F</td>
-                                        <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                                        <td>Singer</td>
-                                        <td>Omaha</td>
-                                        <td>$11.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8A05</td>
-                                        <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
-                                        <td>DJ</td>
-                                        <td>London</td>
-                                        <td>$19.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6636</td>
-                                        <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                                        <td>Keytarist</td>
-                                        <td>London</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        
                         <div class="col-3">
                             <img id="plane" class="circle" src="images/plane.png">
                         </div><!-- end col-3 -->
@@ -448,10 +386,29 @@
                 <div class="row" style="background-color: #34495e;">
                     <div class="col-8">
                         <h2>In just 42 hours and 27 minutes</h2>
-                        <div class="col-3">
-                            <img id="paper-blue" class="circle" src="images/paper-blue.png">
-                        </div><!-- end col-3 -->
-                    </div>
+                        <div class="data" id="html5style2leftcol">
+                                        <h3>Cottages, converted barns, caravans</h3>
+                                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                        <br><p>The superb interior of one of our cottages</p>
+                                    </div><!-- end_left-col -->
+                                    <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                        <ul><!--start of menu list-->
+                                            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                            <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                            <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                            <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                        </ul><!--end of menu list-->
+                                    </nav>
+                                    <!--</div> removed and replaced with </nav>-->
+                                    <div class="data" id="html5style2midcol">
+                                        <h3>Situated in the BDA's beautiful countryside</h3>
+                                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                    </div>
+                                    <div class="col-3">
+                                        <img id="paper-blue" class="circle" src="images/paper-blue.png">
+                                    </div><!-- end col-3 -->
+                    </div><!-- end-col_8 -->
                 </div><!-- end-.row -->
                 <br class="clear">
                 <div class="row" style="background-color: #00afe1;">
