--- a/membership.html
+++ b/membership.html
@@ -376,7 +376,7 @@
                             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
                                 width="398">
                         </div>
-                        
+
                         <div class="col-3">
                             <img id="plane" class="circle" src="images/plane.png">
                         </div><!-- end col-3 -->
@@ -387,27 +387,34 @@
                     <div class="col-8">
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
-                                        <h3>Cottages, converted barns, caravans</h3>
-                                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-                                        <br><p>The superb interior of one of our cottages</p>
-                                    </div><!-- end_left-col -->
-                                    <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                        <ul><!--start of menu list-->
-                                            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                            <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                            <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                            <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                        </ul><!--end of menu list-->
-                                    </nav>
-                                    <!--</div> removed and replaced with </nav>-->
-                                    <div class="data" id="html5style2midcol">
-                                        <h3>Situated in the BDA's beautiful countryside</h3>
-                                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                                    </div>
-                                    <div class="col-3">
-                                        <img id="paper-blue" class="circle" src="images/paper-blue.png">
-                                    </div><!-- end col-3 -->
+                            <h3>Cottages, converted barns, caravans</h3>
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                                width="300">
+                            <br>
+                            <p>The superb interior of one of our cottages</p>
+                        </div><!-- end_left-col -->
+                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                            <ul><!--start of menu list-->
+                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
+                                </li>
+                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                <li class="btn"><a href="index[1].html"
+                                        title="Frequently Asked Questions">Information</a></li>
+                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a>
+                                </li>
+                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
+                                </li>
+                            </ul><!--end of menu list-->
+                        </nav>
+                        <!--</div> removed and replaced with </nav>-->
+                        <div class="data" id="html5style2midcol">
+                            <h3>Situated in the BDA's beautiful countryside</h3>
+                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                                width="398">
+                        </div>
+                        <div class="col-3">
+                            <img id="paper-blue" class="circle" src="images/paper-blue.png">
+                        </div><!-- end col-3 -->
                     </div><!-- end-col_8 -->
                 </div><!-- end-.row -->
                 <br class="clear">
