--- a/membership.html
+++ b/membership.html
@@ -98,11 +98,11 @@
         <div class="row">
             <div class="col-12">
                 <header data-role="header" class="data" id="html5-ch1-7header">
-                    <!-- <div id="hdr"> changed to <header> -->
-                    <hgroup>
+                    <!-- <div id="hdr"> changed to <header> 
+                    <hgroup -->>
                         <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
-                        <h2 class="heading"><strong>StarTrackr!</strong></h2>
-                    </hgroup>
+                        <!-- <h2 class="heading"><strong>StarTrackr!</strong></h2> 
+                    </hgroup>-->
                     <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                         <br>Orris
                     </p>
