--- a/membership.html
+++ b/membership.html
@@ -201,7 +201,7 @@
 
 
 
-                </div><!-- end-content -->
+                
                 <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <h2>Get ready for take off.</h2>
@@ -235,6 +235,7 @@
                     </div><!-- end col-11 -->
                 </div> <!-- end class row -->
                 <br class="clear">
+                </div><!-- end-content -->
                 <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
@@ -269,6 +270,8 @@
                         </div> <!-- end col-3 -->
                     </div><!-- end col-11 -->
                 </div> <!-- end class row -->
+            </div><!-- end-content --
+
                 <br class="clear">
                 <div id="splitter">
                     <h2>Terms &amp; Conditions</h2>
@@ -305,7 +308,7 @@
                                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                                 mollit anim id est laborum</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <br class="clear">
                 <div class="row" style="background-color: #1abc9c;">
