--- a/membership.html
+++ b/membership.html
@@ -347,6 +347,7 @@
                     </div>
                 </div>
                 <br class="clear">
+                </div><!-- end-content -->
 
 
                 <br class="clear">
